# compgraph

./: pyproject.toml
compgraph/: algorithms.py  graph.py
compgraph/operations/: __init__.py  base.py  join.py  map.py  reduce.py
examples/: run_inverted_index_graph.py  run_pmi_graph.py  run_word_count.py  run_yandex_maps_graph.py
tests/: test_examples.py  test_graph.py  test_operations.py
